# long-word

./: app.yaml  main.py  pyproject.toml  requirements.txt  wsgi.py
long_word/: game.py
static/: style.css
tests/: test_game.py
