[tool.poetry]
name = "long-word"
version = "0.1.0"
description = ""
authors = ["Lorcan Rae <77328552+lorcanrae@users.noreply.github.com>"]
readme = "README.md"
# packages = [{include = "long_word"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.1"
pylint = "^3.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
